--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,3 +8,4 @@
 @import "./components/button";
 @import "./components/section";
 @import "./components/policy-card";
+@import "./components/product-card"
