--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -18,10 +18,12 @@ $box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 $colors: (
     "blue": #4267b2,
     "orange": #fbb96b,
+    "yellow": #FFFF00,
     "pink": #fe7e73,
     "white": #fff,
     "black": #000,
     "main": $main-color,
+    "red": #ff0000,
 );
 
 $mobile-width: 600px;
