--- a/src/sass/components/_product.scss
+++ b/src/sass/components/_product.scss
@@ -46,7 +46,7 @@
 
     &__info{
         flex-grow: 1;
-        position: sticky;
+        position: sticky ;
         top: $header-shrink-height;
         padding-top: 2rem;
 
@@ -185,9 +185,12 @@
     }
 
     &__toggle{
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
+        width: 100%;
+        @include flex(center, center)
     }
+
+}
+
+.lineal{
+    height: 100%;
 }
