--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -86,6 +86,24 @@
                 @include tablet{
                     margin-left: 10px;
                 }
+
+                &__count{
+                    @include flex(center, center);
+                    position: absolute;
+                    color: #000000;
+                    font-weight: 600;
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50%;
+                    background-color: $main-color;
+                    border: 2px solid $main-color;
+                    cursor: pointer;
+                    font-size: 1.25rem;
+                    transform: translateY(-150%);
+                    margin-left: 1rem;
+                    z-index: 97;
+                }
+
             }
 
 
@@ -115,6 +133,7 @@
 
                 &.active{
                     transform: translateX(0);
+
                 }
 
                 &__item ~ &__item{
@@ -143,3 +162,5 @@
 
 
 }
+
+
