--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -130,6 +130,7 @@
                 padding-top: 30px;
                 transform: translateX(-100%);
                 transition: transform 0.5s ease;
+                z-index: 100;
 
                 &.active{
                     transform: translateX(0);
