--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -102,6 +102,7 @@
                     transform: translateY(-150%);
                     margin-left: 1rem;
                     z-index: 97;
+                    font-size: 12px;
                 }
 
             }
